--- a/bin/gui/POMPOM.fxml
+++ b/bin/gui/POMPOM.fxml
@@ -13,8 +13,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
+
+<!-- <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import utils.CheckBoxCellFactory?>
+ -->
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
 	<children>
@@ -79,12 +81,12 @@
 								</Tab>
 							</tabs>
 						</TabPane>
-            <TableView fx:id="table" layoutX="14.0" layoutY="32.0" prefHeight="397.0" prefWidth="564.0">
+            <TableView fx:id="table" layoutX="14.0" layoutY="32.0" onMousePressed="#enableEditBtn" prefHeight="397.0" prefWidth="564.0">
                <columns>
-				 <TableColumn fx:id="checkBox" prefWidth="27.0" >
-				 <cellValueFactory> <PropertyValueFactory property="checked"/> </cellValueFactory> <cellFactory> <utils.CheckBoxCellFactory /> </cellFactory> 
+				 <TableColumn fx:id="checkBox" prefWidth="27.0" />
+<!-- 				 <cellValueFactory> <PropertyValueFactory property="checked"/> </cellValueFactory> <cellFactory> <utils.CheckBoxCellFactory /> </cellFactory> 
 				</TableColumn> 
-                  <TableColumn fx:id="taskID" prefWidth="38.0" text="ID" />
+ -->                  <TableColumn fx:id="taskID" prefWidth="38.0" text="ID" />
                   <TableColumn fx:id="taskName" prefWidth="61.0" text="Task" />
                   <TableColumn fx:id="taskStartDateTime" prefWidth="116.0" text="Start Date / Time" />
                   <TableColumn fx:id="taskEndDateTime" prefWidth="110.0" text="End Date/Time" />
@@ -109,7 +111,7 @@
 						<HBox id="HBox" alignment="CENTER" layoutX="367.0" layoutY="22.0" prefHeight="26.0" prefWidth="217.0" spacing="15.0">
 							<children>
       								<Button id="button1" fx:id="newTask" onAction="#newTaskFired" text="New" />
-								<Button id="button1" fx:id="editTask" text="Edit" />
+								<Button id="button1" fx:id="editTask" onAction="#editItem" text="Edit" />
 								<Button id="button1" fx:id="deleteTask" onAction="#deleteItems" text="Delete" />
 							</children>
 						</HBox>
