--- a/src/gui/EditTask.fxml
+++ b/src/gui/EditTask.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="384.0" prefWidth="409.0" styleClass="content" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.NewTaskController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="384.0" prefWidth="409.0" styleClass="content" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.EditTaskController">
    <children>
       <TextField fx:id="newTaskTitle" layoutX="100.0" layoutY="18.0" prefHeight="26.0" prefWidth="237.0" />
       <Label layoutX="14.0" layoutY="21.0" text="Task:">
