--- a/src/gui/POMPOM.fxml
+++ b/src/gui/POMPOM.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!-- @@author A0126375A -->
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -112,12 +112,12 @@
                   <Font name="Heiti TC Light" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="taskNo" layoutX="81.0" layoutY="367.0" text="0" textFill="WHITE">
+            <Label fx:id="taskNo" layoutX="77.0" layoutY="367.0" text="0" textFill="WHITE">
                <font>
                   <Font name="Helvetica Bold" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="98.0" layoutY="371.0" text="task today" textFill="WHITE">
+            <Label layoutX="102.0" layoutY="371.0" text="task today" textFill="WHITE">
                <font>
                   <Font name="Heiti TC Light" size="12.0" />
                </font>
@@ -127,7 +127,7 @@
                   <Font name="Heiti TC Light" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="overdueNo" layoutX="82.0" layoutY="388.0" text="0" textFill="WHITE">
+            <Label fx:id="overdueNo" layoutX="77.0" layoutY="388.0" text="0" textFill="WHITE">
                <font>
                   <Font name="Helvetica Bold" size="18.0" />
                </font>
@@ -142,7 +142,7 @@
                   <Font name="Heiti TC Light" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="eventsNo" layoutX="82.0" layoutY="409.0" text="0" textFill="WHITE">
+            <Label fx:id="eventsNo" layoutX="77.0" layoutY="409.0" text="0" textFill="WHITE">
                <font>
                   <Font name="Helvetica Bold" size="18.0" />
                </font>
