--- a/src/gui/Edit.fxml
+++ b/src/gui/Edit.fxml
@@ -40,9 +40,8 @@
             <Font name="Tw Cen MT Bold" size="18.0" />
          </font>
       </Label>
-      <ComboBox fx:id="editType" layoutX="100.0" layoutY="265.0" prefWidth="150.0" />
-      <ComboBox fx:id="editPriority" layoutX="100.0" layoutY="312.0" prefWidth="150.0" promptText="Select One" />
-      <Label layoutX="12.0" layoutY="315.0" text="Priority:">
+      <ComboBox fx:id="editPriority" layoutX="100.0" layoutY="265.0" prefWidth="150.0" promptText="Select One" />
+      <Label layoutX="12.0" layoutY="315.0" text="">
          <font>
             <Font name="Tw Cen MT Bold" size="18.0" />
          </font>
@@ -59,7 +58,7 @@
       </Label>
       <Button fx:id="editSave" layoutX="260.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleSave" text="Save" />
       <Button fx:id="editCancel" cancelButton="true" layoutX="327.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
-      <Label layoutX="13.0" layoutY="268.0" text="Type:">
+      <Label layoutX="13.0" layoutY="268.0" text="Priority:">
          <font>
             <Font name="Tw Cen MT Bold" size="18.0" />
          </font>
